@@ -430,7 +430,7 @@ void basic_csv_reader<Char,Alloc>::read_array_of_arrays()
                         minimum_structure_capacity_ = 0;
                         stack_.back().array_begun_ = true;
                     }
-                    handler_->value(&string_buffer_[0],string_buffer_.length(),*this);
+                    handler_->value(string_buffer_.c_str(),string_buffer_.length(),*this);
                 }
                 else
                 {
@@ -443,7 +443,7 @@ void basic_csv_reader<Char,Alloc>::read_array_of_arrays()
                         minimum_structure_capacity_ = 0;
                         stack_.back().array_begun_ = true;
                     }
-                    handler_->value(&string_buffer_[0],string_buffer_.length(),*this);
+                    handler_->value(string_buffer_.c_str(),string_buffer_.length(),*this);
                 }
             }
         }
@@ -462,7 +462,7 @@ void basic_csv_reader<Char,Alloc>::read_array_of_arrays()
 template<typename Char,class Alloc>
 void basic_csv_reader<Char,Alloc>::read_array_of_objects()
 {
-    std::vector<std::string> header;
+    std::vector<std::basic_string<Char>> header;
     size_t row_index = 0;
     size_t column_index = 0;
 
@@ -515,7 +515,7 @@ void basic_csv_reader<Char,Alloc>::read_array_of_objects()
             if (column_index < header.size())
             {
                 handler_->name(header[column_index],*this);
-                handler_->value(&string_buffer_[0],string_buffer_.length(),*this);
+                handler_->value(string_buffer_.c_str(),string_buffer_.length(),*this);
             }
             ++column_index;
         }
@@ -539,7 +539,7 @@ void basic_csv_reader<Char,Alloc>::read_array_of_objects()
                 if (column_index < header.size())
                 {
                     handler_->name(header[column_index],*this);
-                    handler_->value(&string_buffer_[0],string_buffer_.length(),*this);
+                    handler_->value(string_buffer_.c_str(),string_buffer_.length(),*this);
                 }
             }
             ++column_index;
